# Research_Coding_Community

./: .gitignore  LICENSE  README.md  _config.yml  _toc.yml  calendar.ipynb  home_page.ipynb  members.ipynb  pa11yci.js  pyproject.toml
.github/workflows/: accessibility.yml  build-book.yml  deploy-book.yml
_build/.doctrees/: environment.pickle  home_page.doctree
_build/.doctrees/community/: about.doctree  code_of_conduct.doctree  join.doctree
_build/.doctrees/courses/example_course/: README.doctree  example_lesson.doctree
_build/html/: .buildinfo  genindex.html  home_page.html  objects.inv  search.html  searchindex.js
_build/html/_sources/courses/example_course/: README.md  example_lesson.ipynb
_build/html/community/: about.html  code_of_conduct.html  join.html
_build/html/courses/example_course/: README.html  example_lesson.html
_build/jupyter_execute/courses/example_course/: example_lesson.ipynb
_static/: full_width.js
clubs/: cfrr.md
data/: events.csv
logistics/: calendar.ipynb
members/: directory.md  directory_guide.md
quizzes/: sample_quiz.json
resources/example_resource/: README.md  example_lesson.ipynb
