
[tool.poetry]
name = "rcc-website"
version = "0.1.0"
description = "Research Coding Community website template"
authors = ["Your Name <you@example.com>"]
readme = "README.md"
package-mode = false

[tool.poetry.dependencies]
python = "^3.11"
jupyter-book = "==1.0.4"
jupyterquiz = ">=2.0.6"
ipykernel = "*"
pandas = "^2.3.3"
plotly = "^6.3.1"
ipywidgets = "^8.1.7"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
